testsuite/poke.pkl/sub-diag-1.pk
/* { dg-do compile } */

var a = 23 -
        2#B;  /* { dg-error "invalid operand.*\n.*expected integral" } */
